--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
 
 
   <!-- YOUR HTML HERE -->
+  <div id='hero-stats'>
+    <table>
+      <tr>
+        <th>Hero stat</th>
+        <th>Value</th>
+      </tr>
+      <tr>
+        <td>Name</td>
+        <td id='hero-name'>test name</td>
+      </tr>
+      <tr>
+        <td>Heroic</td>
+        <td id='hero-is-heroic'>test value</td>
+      </tr>
+      <tr>
+        <td>Health</td>
+        <td id='hero-health'>test health</td>
+      </tr>
+      <tr>
+        <td>Weapon</td>
+        <td id='hero-weapon'>test weapon</td>
+      </tr>
+    </table>
+  </div>
+
   <img id='inn' class='interactive-image' src="images/inn.jpeg" alt="Restore your health in this inn!" onclick='rest(hero)'>
   <img id='dagger' class='interactive-image'  src="images/dagger.jpg" alt="A dagger... Be careful, this is a dangerous item." onclick='pickUpItem(hero, dagger)'>
   <img id='bag' class='interactive-image'  src="images/bag.jpg" alt="Your bag! Click on it to equip your hero with a new weapon."  onclick='equipWeapon(hero)'>
