added displayStats to other functions so stats are updated when clicking images (try clicking the dagger followed by clicking the sack -> This results in the dagger being equipped as a weapon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </tr>
       <tr>
         <td>Name</td>
-        <td id='hero-name'>test name</td>
+        <td id='hero-name'></td>
       </tr>
       <tr>
         <td>Heroic</td>
@@ -25,11 +25,11 @@
       </tr>
       <tr>
         <td>Health</td>
-        <td id='hero-health'>test health</td>
+        <td id='hero-health'></td>
       </tr>
       <tr>
         <td>Weapon</td>
-        <td id='hero-weapon'>test weapon</td>
+        <td id='hero-weapon'></td>
       </tr>
     </table>
   </div>
