--- a/index.html
+++ b/index.html
@@ -38,7 +38,200 @@
   <img id='dagger' class='interactive-image'  src="images/dagger.jpg" alt="A dagger... Be careful, this is a dangerous item." onclick='pickUpItem(hero, dagger)'>
   <img id='bag' class='interactive-image'  src="images/bag.jpg" alt="Your bag! Click on it to equip your hero with a new weapon."  onclick='equipWeapon(hero)'>
 
+  <p>
+    Below this text I created a game as my version of the bonus assignment.
+    I am using a new hero object. When playing, the table above will be overwritten with the hero object of the game below.
+    The game is turnbased. Use the arrow keys to move.
+  </p>
+  <form>
+  </form>
+  <!-- Button to start or pause the game -->
+  <div id='play-button'>
+    Start playing
+  </div>
 
+  <div id='playing-field'>
+    <div id='row-1'>
+      <div id='cell-1-1'>
+      </div>
+      <div id='cell-1-2'>
+      </div>
+      <div id='cell-1-3'>
+      </div>
+      <div id='cell-1-4'>
+      </div>
+      <div id='cell-1-5'>
+      </div>
+      <div id='cell-1-6'>
+      </div>
+      <div id='cell-1-7'>
+      </div>
+      <div id='cell-1-8'>
+      </div>
+      <div id='cell-1-9'>
+      </div>
+    </div>
+    <div id='row-2'>
+      <div id='cell-2-1'>
+      </div>
+      <div id='cell-2-2'>
+      </div>
+      <div id='cell-2-3'>
+      </div>
+      <div id='cell-2-4'>
+      </div>
+      <div id='cell-2-5'>
+      </div>
+      <div id='cell-2-6'>
+      </div>
+      <div id='cell-2-7'>
+      </div>
+      <div id='cell-2-8'>
+      </div>
+      <div id='cell-2-9'>
+      </div>
+    </div>
+    <div id='row-3'>
+      <div id='cell-3-1'>
+      </div>
+      <div id='cell-3-2'>
+      </div>
+      <div id='cell-3-3'>
+      </div>
+      <div id='cell-3-4'>
+      </div>
+      <div id='cell-3-5'>
+      </div>
+      <div id='cell-3-6'>
+      </div>
+      <div id='cell-3-7'>
+      </div>
+      <div id='cell-3-8'>
+      </div>
+      <div id='cell-3-9'>
+      </div>
+    </div>
+    <div id='row-4'>
+      <div id='cell-4-1'>
+      </div>
+      <div id='cell-4-2'>
+      </div>
+      <div id='cell-4-3'>
+      </div>
+      <div id='cell-4-4'>
+      </div>
+      <div id='cell-4-5'>
+      </div>
+      <div id='cell-4-6'>
+      </div>
+      <div id='cell-4-7'>
+      </div>
+      <div id='cell-4-8'>
+      </div>
+      <div id='cell-4-9'>
+      </div>
+    </div>
+    <div id='row-5'>
+      <div id='cell-5-1'>
+      </div>
+      <div id='cell-5-2'>
+      </div>
+      <div id='cell-5-3'>
+      </div>
+      <div id='cell-5-4'>
+      </div>
+      <div id='cell-5-5'>
+      </div>
+      <div id='cell-5-6'>
+      </div>
+      <div id='cell-5-7'>
+      </div>
+      <div id='cell-5-8'>
+      </div>
+      <div id='cell-5-9'>
+      </div>
+    </div>
+    <div id='row-6'>
+      <div id='cell-6-1'>
+      </div>
+      <div id='cell-6-2'>
+      </div>
+      <div id='cell-6-3'>
+      </div>
+      <div id='cell-6-4'>
+      </div>
+      <div id='cell-6-5'>
+      </div>
+      <div id='cell-6-6'>
+      </div>
+      <div id='cell-6-7'>
+      </div>
+      <div id='cell-6-8'>
+      </div>
+      <div id='cell-6-9'>
+      </div>
+    </div>
+    <div id='row-7'>
+      <div id='cell-7-1'>
+      </div>
+      <div id='cell-7-2'>
+      </div>
+      <div id='cell-7-3'>
+      </div>
+      <div id='cell-7-4'>
+      </div>
+      <div id='cell-7-5'>
+      </div>
+      <div id='cell-7-6'>
+      </div>
+      <div id='cell-7-7'>
+      </div>
+      <div id='cell-7-8'>
+      </div>
+      <div id='cell-7-9'>
+      </div>
+    </div>
+    <div id='row-8'>
+      <div id='cell-8-1'>
+      </div>
+      <div id='cell-8-2'>
+      </div>
+      <div id='cell-8-3'>
+      </div>
+      <div id='cell-8-4'>
+      </div>
+      <div id='cell-8-5'>
+      </div>
+      <div id='cell-8-6'>
+      </div>
+      <div id='cell-8-7'>
+      </div>
+      <div id='cell-8-8'>
+      </div>
+      <div id='cell-8-9'>
+      </div>
+    </div>
+    <div id='row-9'>
+      <div id='cell-9-1'>
+      </div>
+      <div id='cell-9-2'>
+      </div>
+      <div id='cell-9-3'>
+      </div>
+      <div id='cell-9-4'>
+      </div>
+      <div id='cell-9-5'>
+      </div>
+      <div id='cell-9-6'>
+      </div>
+      <div id='cell-9-7'>
+      </div>
+      <div id='cell-9-8'>
+      </div>
+      <div id='cell-9-9'>
+      </div>
+    </div>
+  </div>
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
   <button onclick="mocha.checkLeaks(); mocha.run();">Run the tests!</button>
