finalized grid playing field. borders between grid cells to be removed later

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 
   <div id='playing-field'>
-    <div id='row-1'>
+    <!-- <div id='row-1'> -->
       <div id='cell-1-1'>
       </div>
       <div id='cell-1-2'>
@@ -70,8 +70,8 @@
       </div>
       <div id='cell-1-9'>
       </div>
-    </div>
-    <div id='row-2'>
+    <!-- </div>
+    <div id='row-2'> -->
       <div id='cell-2-1'>
       </div>
       <div id='cell-2-2'>
@@ -90,8 +90,8 @@
       </div>
       <div id='cell-2-9'>
       </div>
-    </div>
-    <div id='row-3'>
+    <!-- </div>
+    <div id='row-3'> -->
       <div id='cell-3-1'>
       </div>
       <div id='cell-3-2'>
@@ -110,8 +110,8 @@
       </div>
       <div id='cell-3-9'>
       </div>
-    </div>
-    <div id='row-4'>
+    <!-- </div>
+    <div id='row-4'> -->
       <div id='cell-4-1'>
       </div>
       <div id='cell-4-2'>
@@ -130,8 +130,8 @@
       </div>
       <div id='cell-4-9'>
       </div>
-    </div>
-    <div id='row-5'>
+    <!-- </div>
+    <div id='row-5'> -->
       <div id='cell-5-1'>
       </div>
       <div id='cell-5-2'>
@@ -150,8 +150,8 @@
       </div>
       <div id='cell-5-9'>
       </div>
-    </div>
-    <div id='row-6'>
+    <!-- </div>
+    <div id='row-6'> -->
       <div id='cell-6-1'>
       </div>
       <div id='cell-6-2'>
@@ -170,8 +170,8 @@
       </div>
       <div id='cell-6-9'>
       </div>
-    </div>
-    <div id='row-7'>
+    <!-- </div>
+    <div id='row-7'> -->
       <div id='cell-7-1'>
       </div>
       <div id='cell-7-2'>
@@ -190,8 +190,8 @@
       </div>
       <div id='cell-7-9'>
       </div>
-    </div>
-    <div id='row-8'>
+    <!-- </div>
+    <div id='row-8'> -->
       <div id='cell-8-1'>
       </div>
       <div id='cell-8-2'>
@@ -210,8 +210,8 @@
       </div>
       <div id='cell-8-9'>
       </div>
-    </div>
-    <div id='row-9'>
+    <!-- </div>
+    <div id='row-9'> -->
       <div id='cell-9-1'>
       </div>
       <div id='cell-9-2'>
@@ -230,7 +230,7 @@
       </div>
       <div id='cell-9-9'>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
