--- a/index.html
+++ b/index.html
@@ -51,167 +51,167 @@
   </div>
 
   <div id='playing-field'>
-      <div id='cell-0-0'>
+      <div class='playing-field-cell' id='cell-0-0'>
       </div>
-      <div id='cell-0-1'>
+      <div class='playing-field-cell' id='cell-0-1'>
       </div>
-      <div id='cell-0-2'>
+      <div class='playing-field-cell' id='cell-0-2'>
       </div>
-      <div id='cell-0-3'>
+      <div class='playing-field-cell' id='cell-0-3'>
       </div>
-      <div id='cell-0-4'>
+      <div class='playing-field-cell' id='cell-0-4'>
       </div>
-      <div id='cell-0-5'>
+      <div class='playing-field-cell' id='cell-0-5'>
       </div>
-      <div id='cell-0-6'>
+      <div class='playing-field-cell' id='cell-0-6'>
       </div>
-      <div id='cell-0-7'>
+      <div class='playing-field-cell' id='cell-0-7'>
       </div>
-      <div id='cell-0-8'>
+      <div class='playing-field-cell' id='cell-0-8'>
       </div>
-      <div id='cell-1-0'>
+      <div class='playing-field-cell' id='cell-1-0'>
       </div>
-      <div id='cell-1-1'>
+      <div class='playing-field-cell' id='cell-1-1'>
       </div>
-      <div id='cell-1-2'>
+      <div class='playing-field-cell' id='cell-1-2'>
       </div>
-      <div id='cell-1-3'>
+      <div class='playing-field-cell' id='cell-1-3'>
       </div>
-      <div id='cell-1-4'>
+      <div class='playing-field-cell' id='cell-1-4'>
       </div>
-      <div id='cell-1-5'>
+      <div class='playing-field-cell' id='cell-1-5'>
       </div>
-      <div id='cell-1-6'>
+      <div class='playing-field-cell' id='cell-1-6'>
       </div>
-      <div id='cell-1-7'>
+      <div class='playing-field-cell' id='cell-1-7'>
       </div>
-      <div id='cell-1-8'>
+      <div class='playing-field-cell' id='cell-1-8'>
       </div>
-      <div id='cell-2-0'>
+      <div class='playing-field-cell' id='cell-2-0'>
       </div>
-      <div id='cell-2-1'>
+      <div class='playing-field-cell' id='cell-2-1'>
       </div>
-      <div id='cell-2-2'>
+      <div class='playing-field-cell' id='cell-2-2'>
       </div>
-      <div id='cell-2-3'>
+      <div class='playing-field-cell' id='cell-2-3'>
       </div>
-      <div id='cell-2-4'>
+      <div class='playing-field-cell' id='cell-2-4'>
       </div>
-      <div id='cell-2-5'>
+      <div class='playing-field-cell' id='cell-2-5'>
       </div>
-      <div id='cell-2-6'>
+      <div class='playing-field-cell' id='cell-2-6'>
       </div>
-      <div id='cell-2-7'>
+      <div class='playing-field-cell' id='cell-2-7'>
       </div>
-      <div id='cell-2-8'>
+      <div class='playing-field-cell' id='cell-2-8'>
       </div>
-      <div id='cell-3-0'>
+      <div class='playing-field-cell' id='cell-3-0'>
       </div>
-      <div id='cell-3-1'>
+      <div class='playing-field-cell' id='cell-3-1'>
       </div>
-      <div id='cell-3-2'>
+      <div class='playing-field-cell' id='cell-3-2'>
       </div>
-      <div id='cell-3-3'>
+      <div class='playing-field-cell' id='cell-3-3'>
       </div>
-      <div id='cell-3-4'>
+      <div class='playing-field-cell' id='cell-3-4'>
       </div>
-      <div id='cell-3-5'>
+      <div class='playing-field-cell' id='cell-3-5'>
       </div>
-      <div id='cell-3-6'>
+      <div class='playing-field-cell' id='cell-3-6'>
       </div>
-      <div id='cell-3-7'>
+      <div class='playing-field-cell' id='cell-3-7'>
       </div>
-      <div id='cell-3-8'>
+      <div class='playing-field-cell' id='cell-3-8'>
       </div>
-      <div id='cell-4-0'>
+      <div class='playing-field-cell' id='cell-4-0'>
       </div>
-      <div id='cell-4-1'>
+      <div class='playing-field-cell' id='cell-4-1'>
       </div>
-      <div id='cell-4-2'>
+      <div class='playing-field-cell' id='cell-4-2'>
       </div>
-      <div id='cell-4-3'>
+      <div class='playing-field-cell' id='cell-4-3'>
       </div>
-      <div id='cell-4-4'>
+      <div class='playing-field-cell' id='cell-4-4'>
       </div>
-      <div id='cell-4-5'>
+      <div class='playing-field-cell' id='cell-4-5'>
       </div>
-      <div id='cell-4-6'>
+      <div class='playing-field-cell' id='cell-4-6'>
       </div>
-      <div id='cell-4-7'>
+      <div class='playing-field-cell' id='cell-4-7'>
       </div>
-      <div id='cell-4-8'>
+      <div class='playing-field-cell' id='cell-4-8'>
       </div>
-      <div id='cell-5-0'>
+      <div class='playing-field-cell' id='cell-5-0'>
       </div>
-      <div id='cell-5-1'>
+      <div class='playing-field-cell' id='cell-5-1'>
       </div>
-      <div id='cell-5-2'>
+      <div class='playing-field-cell' id='cell-5-2'>
       </div>
-      <div id='cell-5-3'>
+      <div class='playing-field-cell' id='cell-5-3'>
       </div>
-      <div id='cell-5-4'>
+      <div class='playing-field-cell' id='cell-5-4'>
       </div>
-      <div id='cell-5-5'>
+      <div class='playing-field-cell' id='cell-5-5'>
       </div>
-      <div id='cell-5-6'>
+      <div class='playing-field-cell' id='cell-5-6'>
       </div>
-      <div id='cell-5-7'>
+      <div class='playing-field-cell' id='cell-5-7'>
       </div>
-      <div id='cell-5-8'>
+      <div class='playing-field-cell' id='cell-5-8'>
       </div>
-      <div id='cell-6-0'>
+      <div class='playing-field-cell' id='cell-6-0'>
       </div>
-      <div id='cell-6-1'>
+      <div class='playing-field-cell' id='cell-6-1'>
       </div>
-      <div id='cell-6-2'>
+      <div class='playing-field-cell' id='cell-6-2'>
       </div>
-      <div id='cell-6-3'>
+      <div class='playing-field-cell' id='cell-6-3'>
       </div>
-      <div id='cell-6-4'>
+      <div class='playing-field-cell' id='cell-6-4'>
       </div>
-      <div id='cell-6-5'>
+      <div class='playing-field-cell' id='cell-6-5'>
       </div>
-      <div id='cell-6-6'>
+      <div class='playing-field-cell' id='cell-6-6'>
       </div>
-      <div id='cell-6-7'>
+      <div class='playing-field-cell' id='cell-6-7'>
       </div>
-      <div id='cell-6-8'>
+      <div class='playing-field-cell' id='cell-6-8'>
       </div>
-      <div id='cell-7-0'>
+      <div class='playing-field-cell' id='cell-7-0'>
       </div>
-      <div id='cell-7-1'>
+      <div class='playing-field-cell' id='cell-7-1'>
       </div>
-      <div id='cell-7-2'>
+      <div class='playing-field-cell' id='cell-7-2'>
       </div>
-      <div id='cell-7-3'>
+      <div class='playing-field-cell' id='cell-7-3'>
       </div>
-      <div id='cell-7-4'>
+      <div class='playing-field-cell' id='cell-7-4'>
       </div>
-      <div id='cell-7-5'>
+      <div class='playing-field-cell' id='cell-7-5'>
       </div>
-      <div id='cell-7-6'>
+      <div class='playing-field-cell' id='cell-7-6'>
       </div>
-      <div id='cell-7-7'>
+      <div class='playing-field-cell' id='cell-7-7'>
       </div>
-      <div id='cell-7-8'>
+      <div class='playing-field-cell' id='cell-7-8'>
       </div>
-      <div id='cell-8-0'>
+      <div class='playing-field-cell' id='cell-8-0'>
       </div>
-      <div id='cell-8-1'>
+      <div class='playing-field-cell' id='cell-8-1'>
       </div>
-      <div id='cell-8-2'>
+      <div class='playing-field-cell' id='cell-8-2'>
       </div>
-      <div id='cell-8-3'>
+      <div class='playing-field-cell' id='cell-8-3'>
       </div>
-      <div id='cell-8-4'>
+      <div class='playing-field-cell' id='cell-8-4'>
       </div>
-      <div id='cell-8-5'>
+      <div class='playing-field-cell' id='cell-8-5'>
       </div>
-      <div id='cell-8-6'>
+      <div class='playing-field-cell' id='cell-8-6'>
       </div>
-      <div id='cell-8-7'>
+      <div class='playing-field-cell' id='cell-8-7'>
       </div>
-      <div id='cell-8-8'>
+      <div class='playing-field-cell' id='cell-8-8'>
       </div>
   </div>
 
