--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     I am using a new hero object. When playing, the table above will be overwritten with the hero object of the game below.
     The game is turnbased. Use the arrow keys to move.
   </p>
+  <p>
+    Remember, in the inn you can restore your health! You will need it as it will take more than 1 fight to kill an enemy.
+  </p>
   <form>
   </form>
   <!-- Button to start or pause the game -->
